Adds TF starter solution for Cognitive Search (#1)
Adds a simple custom Web API skill deployed with Azure Functions, Terraform configuration to deploy all necessary Azure resources, as well as configuration to deploy the Cognitive Search skills pipeline.

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,16 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Azure Functions artifacts
+bin
+obj
+appsettings.json
+local.settings.json
+.python_packages
+client/client.zip
+api.zip
+
+# Terraform
+.terraform
+terraform.tfstate*
